Finished migrating from v3 to v4 and fixed all bugs
The migration was quite simple, although there was an automatic tool meant to simplify the process, I found that the code had some errors that were application breaking, so I chose to manually migrate. Changes made: 1. importing the openai package in Node has changed (no more need for configuration). 2. createChatCompletion method has been changed to chat.completions.create. 3.data has been dropped while receiving the response. Other Issues and bugs fixed: 1) Script.js did not display the message correctly (fixed by adding a sender and content variables while refractoring.) 2) index.html did not correctly point to Script.js. 3)Changed background colors to my liking. 4)added launch.json to run debugger and test endpoints

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 <body>
     <div id="chat-container">
         <div id="messages"></div>
-        <form id="messages-form">
-            <input id="messages-input" type="text" placeholder="Type a message..." autocomplete="off"/>
+        <form id="message-form">
+            <input id="message-input" type="text" placeholder="Type a message..." autocomplete="off"/>
             <button type="submit">Send</button>
         </form>
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
